<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appointment Schedular</string>
    <string name="action_settings">Settings</string>
    <string name="event_title">Title</string>
    <string name="event_location">Location</string>
    <string name="start_date_time">Start Date and Time</string>
    <string name="button_start_time">Start Time</string>
	<string name="button_start_date">Start Date</string>
	<string name="end_date_time">End Date and Time</string>
    <string name="button_end_time">End Time</string>
	<string name="button_end_date">End Date</string>
	<string name="event_invitee">Invitees</string>
	<string name="submit_button">Submit</string>
	<string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    
    
    <string name="summary">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="inserting">Inserting . . . . . !!!</string>
    <string name="smsInvitee">Mobile Number</string>
    
    
	
</resources>
